...
            "state" : "translated",
            "value" : "図版は未読み込み"
          }
        }
      }
    },
    "图鉴" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Catalog"
          }
...
            "state" : "translated",
            "value" : "カード"
          }
        }
      }
    },
    "完成" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
...
            "state" : "translated",
            "value" : "行きたい"
          }
        }
      }
    },
    "我的" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Me"
          }
...
            "state" : "translated",
            "value" : "別の場所で試すか、「近く」を解除してすべてを閲覧してください。"
          }
        }
      }
    },
    "搜索古迹、地点或时代" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search monuments, places or periods"
          }
...
            "state" : "translated",
            "value" : "現在はアプリの使用中だけ位置情報を使います。アプリを開いていないときも通知を受けるには、設定で「常に」に変更してください。"
          }
        }
      }
    },
    "省份" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Province"
          }
...
            "state" : "translated",
            "value" : "控えめ"
          }
        }
      }
    },
    "返回" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Back"
          }
...
